# AnalysisAssistant

./: .gitignore  LICENSE  README.md  demo_llm_interface.py  demo_simple.py  example_llm_usage.py  plan.MD  pyproject.toml  requirements.txt  sample_data.csv
data_analysis_assistant/: __init__.py  cli.py
data_analysis_assistant/agent_core/: __init__.py  conventions.py  conversation.py  dataset_analyzer.py  engine.py  executor.py  models.py  persistence.py  project_init.py  summarizer.py  summary_generator.py
data_analysis_assistant/agent_core/prompts/: __init__.py  base_analysis_prompt.txt  error_fixing_prompt.txt
data_analysis_assistant/agent_core/tools/: __init__.py  modeling.py  plotting.py  profiling.py
data_analysis_assistant/ui/: __init__.py  app_streamlit.py  components.py  state.py
examples/: convention_usage.py
history/: code_20250802_193637.py  code_20250802_193814.py  code_20250802_193846.py  code_20250802_194050.py  code_20250802_194050_1.py  code_20250802_194050_2.py
projects/: .gitkeep
projects/my_first_analysis_project/: conventions.json  llm_summary.md
projects/sales_analysis/: conventions.json  llm_summary.md
projects/test_project/: conventions.json  llm_summary.md
tests/: test_cli.py  test_conventions.py  test_executor.py  test_llm_engine.py  test_persistence.py  test_placeholder.py  test_project_init.py  test_prompt_to_code_generation.py
